# ace-reproduction

./: .gitattributes  .gitignore  API.md  APPWORLD.md  CODE-CHANGES.md  EXPERIMENTS.md  JOURNAL.md  NOTES.md  PLAN.md  README.md  SLURM.md  analyze_runs.py  draft-proposal.tex  main.bib  new-proposal-template.tex  run-finar-gptoss120b-subset.sh  run-finar-gptoss20b-subset.sh  run-finar-minimaxm2.7-subset.sh
ace/: README.md  (+4 more)
maestro/: README.md  pyproject.toml
maestro/.github/ISSUE_TEMPLATE/: add_example.md
maestro/.github/workflows/: ci.yaml
maestro/examples/adk/brand-search-optimization/: pyproject.toml
maestro/examples/adk/brand-search-optimization/brand_search_optimization/: __init__.py
maestro/examples/adk/content-creation/: .gitignore  inputs.txt  run_experiment.sh
maestro/examples/adk/content-creation/local_deployment/: .gitignore  verify_setup.sh
maestro/examples/adk/image-scoring/: pyproject.toml
maestro/examples/adk/image-scoring/image_scoring/: agent.py
maestro/examples/adk/marketing-agency/: INSIGHTS.md  run_auto_marketing_agency.py
maestro/examples/adk/marketing-agency/demo_html/: gallery.html  index.html
maestro/examples/adk/marketing-agency/marketing_agency/: prompt.py
maestro/examples/autogen/: autogen_exporters.py  data_extract.py
maestro/examples/autogen/Magentic-One/: main.py
maestro/examples/autogen/Stock-Research-Example/: main.py
maestro/examples/langgraph/Plan-and-Execute/: main.py
maestro/examples/langgraph/Plan-and-Execute/tools/: sample_hotpot_questions.py
maestro/examples/langgraph/crag/: README.md
maestro/examples/langgraph/faq_redis_semantic_cache_naive/: README.md  requirements.txt
maestro/examples/langgraph/faq_redis_semantic_cache_naive/cache/: __init__.py  evals.py  faq_data_container.py
maestro/examples/langgraph/faq_redis_semantic_cache_naive/data/: test_queries.csv
maestro/examples/langgraph/faq_redis_semantic_cache_naive/scripts/: backfill_trace_metadata.py
maestro/examples/langgraph/language-agent-tree-search/: .gitignore
maestro/examples/langgraph/language-agent-tree-search/data/: questions.csv
maestro/examples/langgraph/tree-of-thoughts/: README.md  requirements.txt
maestro/examples/mcp-agent/mcp_financial_analyzer_benchmark/: README.md  main.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example  sample_report.md
maestro/examples/mcp-agent/temporal/: README.md  mcp_agent.config.yaml
maestro/plot/: __init__.py  plot_avg_pairwise_call_graph_similarity.py  plot_example_metrics.py  plot_model_similarity_heatmaps.py  plot_telemetry_arch_combo.py  plot_telemetry_model_boxplots.py  plot_telemetry_tavily_diff.py  requirements.txt
maestro/plot/configs/: runs_wi_by_model_parquet.json
maestro/plot/lib/: __init__.py  analyzer.py  comparison.py  data_loaders.py  parquet_utils.py
maestro/src/maestro/: __init__.py
maestro/src/maestro/cli/: main.py
maestro/src/maestro/telemetry_helpers/: process_metrics.py
maestro/tools/: README.md
maestro/tools/fake_collector/: simple_main.py  template.json
maestro/tools/fake_collector/app/: __init__.py  collector.py
(+6949 files in other folders)
