[project]
name = "mcp-financial-analyzer-benchmark"
version = "0.1.0"
description = "Financial Analyzer MAS benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39",
    "fastmcp>=0.2.0",
    "google-genai>=1.10.0",
    "maestro[telemetry]",
    "mcp-agent",
    "mcp-server-bing",
    "mcp-server-fetch>=0.1.4",
    "openai>=1.58",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[tool.uv.sources]
maestro = { path = "../../..", editable = true }
mcp-agent = { git = "https://github.com/chenIshi/mcp-agent", rev = "feat/trace-collection" }
mcp-server-bing = { git = "https://github.com/leehanchung/bing-search-mcp.git" }
