[project]
name = "python_and_java_multiagent"
version = "0.1.0"
description = "Create content using a multi-agent system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.0",
    "geopy>=2.4.1",
    "google-adk>=1.0.0",
    "gradio>=5.30.0",
    "a2a-sdk>=0.2.6",
    "litellm>=1.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-google-genai>=0.4b0",
    "opentelemetry-instrumentation-vertexai>=2.0b0",
    "python-dotenv>=1.0.0"
]
