[project]
name = "python_multiagent"
version = "0.1.0"
description = "Content plan, then proceed to writting, finally examine the quality with editor."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.0",
    "geopy>=2.4.1",
    "google-adk>=1.0.0",
    "gradio>=5.30.0",
    "a2a-sdk>=0.2.6",
    "litellm>=1.0.0"
]
